--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -994,7 +994,7 @@ body
                         @extend #LEFT;
                         width: $full-width; height: $full-height;
                         background: $silver;
-                        padding-right: 240px;
+                        padding-right: 190px;
                         padding-left: 40px;
 
                         textarea.send-new-msg
@@ -1295,6 +1295,28 @@ body
                                 }
                             }
 
+                            li.add-group-contact
+                            {
+                                .circle
+                                {
+                                    @extend #LEFT, #CENTER;
+                                    height: 40px;   width: 40px;
+                                    background: $pink;
+                                    border-radius: 50%;
+                                    line-height: 40px;
+                                    font-size: 14px;    font-weight: 100;
+                                    margin-right: 10px;
+                                    color: $light;
+                                }
+
+                                .txt
+                                {
+                                    @extend #LEFT;
+                                    font-size: 12px;    font-weight: normal;
+                                    color: $purple;
+                                    line-height: 40px;
+                                }
+                            }
                         }
 
                         .info-search
